# MaterialX

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  BRANCH.md  BUILDING.md  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  GOVERNANCE.md  JsMaterialXCore.js  JsMaterialXCore.wasm  JsMaterialXGenShader.data  JsMaterialXGenShader.js  JsMaterialXGenShader.wasm  LICENSE.txt  OIIOLoader.py  OPTIONS.md  PluginDesign.md  README.md  SECURITY.md  THIRD-PARTY.md  apply_changes.diff  convert_table.md  documentSerializer.html  documentSerializer.md  goal.md  index.html  main.js  mtx_skbuild_plugin.py  pyproject.toml  vcpkg-configuration.json  vcpkg.json  wasm_disabled.travis.yml
contrib/MaterialXForMaya/: CMakeLists.txt  README.md
contrib/MayaExporter/: CMakeLists.txt  README.md
documents/: CMakeLists.txt  Doxyfile.in  README.md  sphinx-conf.py.in  sphinx-custom.css
documents/DeveloperGuide/: APIChanges.md  CodeExamples.md  GraphEditor.md  MainPage.md  README.md  ShaderGeneration.md  Viewer.md  index.rst
documents/DoxygenAwesome/: doxygen-awesome.css
documents/Examples/: BsdfSubGraphs.mtlx  CustomNode.mtlx  GeomInfos.mtlx  Looks.mtlx  MaterialGraphs.mtlx  MultiOutput.mtlx  NodeGraphs.mtlx  PaintMaterials.mtlx  PostShaderComposite.mtlx  PreShaderComposite.mtlx  SimpleSrf.mtlx  SubGraphs.mtlx
documents/Libraries/: README.md  adsk_defs.mtlx  adsk_impl_shadergen_glsl.mtlx  adsk_impl_shadergen_osl.mtlx  mx_stdlib_defs.mtlx  mx_stdlib_impl_osl.mtlx  mx_stdlib_impl_shadergen_glsl.mtlx  mx_stdlib_impl_shadergen_osl.mtlx  stdlib_defs.mtlx  stdlib_ng.mtlx  stdlib_osl_impl.mtlx  sx_defs.mtlx  sx_impl_shadergen_glsl.mtlx
documents/LogoImages/: README
documents/PythonAPI/: CMakeLists.txt  conf.py.in  custom.css
documents/Specification/: MaterialX.GeomExts.md  MaterialX.NPRSpec.md  MaterialX.PBRSpec.md  MaterialX.Proposals.md  MaterialX.Specification.md  MaterialX.StandardNodes.md  MaterialX.Supplement.md  MaterialX.v1.39.GeomExts.md  MaterialX.v1.39.PBRSpec.md  MaterialX.v1.39.Spec.md  MaterialX.v1.39.Supplement.md  README.md  columntest.md  example.md  math.md  nodeindex.md  retest.md  tabletest.md
documents/SpecificationTemplates/: MaterialX.StandardNodes.template.md  nprlib_spec.template.md  pbrlib_spec.template.md  placeholder.template.md
documents/TestSuite/: README.md  _options.mtlx
libraries/: CMakeLists.txt  README.md
libraries/bxdf/: alSurface.mtlx  disney_brdf_2012.mtlx  disney_brdf_2015.mtlx  disney_principled.mtlx  gltf_pbr.mtlx  gltf_tiledimage.mtlx  mx39_open_pbr_surface.mtlx  open_pbr_surface.mtlx  standard_surface.mtlx  usd.mtlx  usd_preview_surface.mtlx
libraries/cmlib/: cmlib_defs.mtlx  cmlib_ng.mtlx
libraries/experimental/: experimental_defs.mtlx  experimental_ng.mtlx
libraries/lights/: lights_defs.mtlx
libraries/nprlib/: nprlib_defs.mtlx  nprlib_ng.mtlx
libraries/pbrlib/: pbrlib_defs.mtlx  pbrlib_ng.mtlx  unlit_surface.mtlx
libraries/stdlib/: stdlib_defs.mtlx  stdlib_ng.mtlx
libraries/targets/: arnold.mtlx  essl.mtlx  genglsl.mtlx  genglsl_wgsl.mtlx  genhlsl.mtlx  genmdl.mtlx  genmsl.mtlx  genosl.mtlx  genoslnetwork.mtlx  genoslnodes.mtlx  genslangl.mtlx  genvulkan.mtlx  ogsfx.mtlx  ogsxml.mtlx  vulkan.mtlx  wgsl.mtlx
libraries/translation/: standard_surface_to_UsdPreviewSurface.mtlx
python/: CMakeLists.txt  pyproject.toml.in  setup.py.in
python/MaterialX/: __init__.py  colorspace.py  datatype.py  graph_editor_integration.py  main.py  plugin_manager.py
python/MaterialXTest/: creatematerial.py  genMaterialsFromDefs.py  genshader.py  imports.py  main.py  shaderx.py  tests.html  tests_creatematerial.py  tests_to_html.bat  tests_to_html.py  writefilter.py
python/Scripts/: OIIOLoader.py  README.md  baketextures.py  comparenodedefs.py  createdefinition.py  creatematerial.py  definitionMaterials.py  generateShader.py  generatereference.py  generateshader.py  genmdl.py  graph_editor_plugin_example.py  mxcustomnamespacefixer.py  mxdoc.py  mxformat.py  mxgltf.py  mxgraph.py  mxnodes.py  mxupdate.py  mxvalidate.py  nodedef_documentation.md  oiio_loader.py  plugin_manager.py  pybind_docs.py  registration_test.py  removeNodeLayout.py  testEdit.py  textures_patterns.json  translateshader.py  udimutils.py  writelooks.py  writenodegraphs.py
source/: CMakeLists.txt  README.md
source/JsMaterialX/: .gitignore  CMakeLists.txt  Helpers.h  MapHelper.h  MaterialXLib.cpp  README.md  VectorHelper.h  build_javascript_win.bat  helpers.h  initMaterialX.js  post.js  pre.js
source/MaterialXBuildTools/: CMakeLists.txt
source/MaterialXContrib/: CMakeLists.txt  OGSXMLFragmentWrapper.cpp  OGSXMLFragmentWrapper.h
source/MaterialXCore/: .gitignore  Api.h  CMakeLists.txt  Definition.cpp  Definition.h  Document.cpp  Document.h  Element.cpp  Element.h  Exception.h  Export.h  Generated.h.in  Geom.cpp  Geom.h  Interface.cpp  Interface.h  Library.h  Library.h.in  Look.cpp  Look.h  LookUtil.cpp  LookUtil.h  Material.cpp  Material.h  MaterialNode.cpp  MaterialNode.h  MaterialXCore_fwd.h  MxTrace.cpp  MxTrace.h  MxTracePerfetto.cpp  MxTracePerfetto.h  Node.cpp  Node.h  Observer.h  Override.cpp  Override.h  PerfettoSink.cpp  PerfettoSink.h  Platform.h  Property.cpp  (+19 more)
source/MaterialXCross/: CMakeLists.txt  Cross.cpp  Cross.h
source/MaterialXFormat/: Api.h  CMakeLists.txt  Environ.cpp  Environ.h  Export.h  File.cpp  File.h  GraphIO.cpp  GraphIO.h  GraphIo.cpp  GraphIo.h  Util.cpp  Util.h  XmlExport.cpp  XmlExport.h  XmlIo.cpp  XmlIo.h
source/MaterialXFuzz/: CMakeLists.txt  XmlIo_fuzz.cpp
source/MaterialXGenArnold/: ArnoldShaderGenerator.cpp  ArnoldShaderGenerator.h  CMakeLists.txt
source/MaterialXGenEssl/: CMakeLists.txt  EsslShaderGenerator.cpp  EsslShaderGenerator.h  EsslSyntax.cpp  EsslSyntax.h
source/MaterialXGenGlsl/: CMakeLists.txt  EsslShaderGenerator.cpp  EsslShaderGenerator.h  EsslSyntax.cpp  EsslSyntax.h  Export.h  GlslResourceBindingContext.cpp  GlslResourceBindingContext.h  GlslShaderGenerator.cpp  GlslShaderGenerator.h  GlslSyntax.cpp  GlslSyntax.h  (+12 more)
(+5264 files in other folders)
